--- a/karafka-producer/src/main/resources/application.properties
+++ b/karafka-producer/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 
 #Spring Cloud Stream
 --spring.cloud.stream.bindings.stringSupplier-out-0.destination=ijzrkrqq-default
---spring.cloud.stream.bindings.stringSupplier-out-0.group=ijzrkrqq-default-ira
+#Added balancing of partitions to add extra consumers
+--spring.cloud.stream.bindings.stringSupplier-out-0.producer.partitionKeyExcpression=headers.id
+--spring.cloud.stream.bindings.stringSupplier-out-0.producer.partition-count=5
+
 
